--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
+/* DESIGN VARIABLES */
+$--black: #011826;
+$--blue: #0557a8;
+$--dark-blue: #162b46;
+$--green: #1e5359;
+$--light-green: #a7d4d9;
+$--white: #ebeff2;
+
+$--primary-font: 'IBM Plex Serif', serif;
+$--secondary-font: 'Inter', sans-serif;
+
+$--layout-width: 1280px;
+
+//form elements 
+$--autofill: #f2faff;
+$--error: #fff3f3;
+$--input: #ffffff;
+$--required: #fb2828; 
+$--success: #54c111;
+
+/* CODE STARTS HERE */
 body {
-  font-family: sans-serif;
+  background: $--white;
+  color: $--black; 
+  font-family: $--secondary-font;
 }
