--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,7 @@
 /* DESIGN VARIABLES */
 $--black: #011826;
 $--blue: #0557a8;
-$--dark-blue: #162b46;
+$--dark-blue: #071d49;
 $--green: #1e5359;
 $--light-green: #a7d4d9;
 $--white: #ebeff2;
@@ -26,4 +26,30 @@ body {
   background: $--white;
   color: $--black; 
   font-family: $--secondary-font;
+  margin: 0;
+}
+
+html,
+body {
+	height: 100%;
+}
+
+#root {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+}
+
+.wrapper {
+  flex: 1 0 auto;
+}
+
+footer {
+  background: $--dark-blue;
+  color: $--input;  
+  flex-shrink: 0;
+  font-size: 14px;
+	line-height: .5rem;
+  padding: 1.5rem;
+  text-align: center;
 }
