--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,61 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-
-/* DESIGN VARIABLES */
-$--black: #011826;
-$--blue: #0557a8;
-$--dark-blue: #071d49;
-$--green: #1e5359;
-$--light-green: #a7d4d9;
-$--white: #ebeff2;
-
-$--default-letter-spacing: .075rem;
-$--primary-font: 'IBM Plex Serif', serif;
-$--secondary-font: 'Inter', sans-serif;
-
-$--bread-text: 14px;
-$--default-layout: 100%;
-$--layout-width: 1280px;
-$--unset: 0;
-
-//form elements 
-$--autofill: #f2faff;
-$--error: #fff3f3;
-$--input: #ffffff;
-$--required: #fb2828; 
-$--success: #54c111;
-
-/* CODE STARTS HERE */
-body {
-  background: $--white;
-  color: $--black; 
-  font-family: $--secondary-font;
-  margin: $--unset;
-}
-
-html,
-body {
-	height: $--default-layout;
-}
-
-#root {
-	display: flex;
-	flex-direction: column;
-	height: $--default-layout;
-}
-
-.wrapper {
-  font-family: $--primary-font;
-  flex: 1 0 auto;
-}
-
-footer {
-  background: $--dark-blue;
-  color: $--input;  
-  flex-shrink: $--unset;
-  font-size: $--bread-text;
-  letter-spacing: $--default-letter-spacing;
-	line-height: .5rem;
-  padding: 1.5rem;
-  text-align: center;
-}
+@import "partials/admin";
+@import "partials/base";
+@import "partials/footer";
+@import "partials/forms";
+@import "partials/gallery";
+@import "partials/layout";
+@import "partials/login";
+@import "partials/nav";
