--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -1,15 +1,18 @@
 .wrapper {
-    font-family: $--primary-font;
-    flex: 1 0 auto;
-  }
-  
-  footer {
-    background: $--dark-blue;
-    color: $--input;  
-    flex-shrink: $--unset;
-    font-size: $--bread-text;
-    letter-spacing: $--default-letter-spacing;
-    line-height: .5rem;
-    padding: 1.5rem;
-    text-align: center;
-  }
+  font-family: $--primary-font;
+  flex: 1 0 auto;
+  margin: 0 auto;
+  max-width: $--layout-width;
+  padding: $--unset;
+}
+
+footer {
+  background: $--dark-blue;
+  color: $--input;  
+  flex-shrink: $--unset;
+  font-size: $--bread-text;
+  letter-spacing: $--default-letter-spacing;
+  line-height: .5rem;
+  padding: 1.5rem;
+  text-align: center;
+}
