--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -9,6 +9,9 @@ $--green: #1e5359;
 $--light-green: #a7d4d9;
 $--white: #ebeff2;
 
+$--black-border: 1px solid #011826;
+$--blue-border: 2px solid #071d49;
+
 $--default-letter-spacing: .075rem;
 $--primary-font: 'IBM Plex Serif', serif;
 $--secondary-font: 'Inter', sans-serif;
