--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -2,7 +2,7 @@
   flex: 1 0 auto;
   margin: 0 auto;
   max-width: $--layout-width;
-  padding: $--unset;
+  padding: 2rem 3rem 0rem;
 }
 
 footer {
