--- a/src/sass/partials/_forms.scss
+++ b/src/sass/partials/_forms.scss
@@ -1,5 +1,5 @@
 form {
-    max-width: 600px;
+    max-width: 500px;
 }
 
 button {
@@ -34,6 +34,12 @@ button:focus {
     font-weight: bold;
 }
 
+.rowform {
+    display: flex;
+    flex-direction: row;
+    gap: 2.75rem;
+}
+
 textarea {
     height: 150px;
     resize: none;
@@ -52,3 +58,13 @@ input, textarea {
 label {
     font-weight: bold;
 }
+
+@media only screen and (max-width: 600px) {
+    form {
+        max-width: 375px;
+    }
+    .rowform {
+        flex-direction: column;
+        gap: 0;
+    }
+  }
