--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -33,7 +33,11 @@ $--input: #ffffff;
 $--required: #fb2828; 
 $--success: #54c111;
 
-/* CODE STARTS HERE */
+/* HOME */
+* {
+  box-sizing: border-box;
+}
+
 body {
   background: $--white;
   color: $--black; 
@@ -50,4 +54,13 @@ body {
 	display: flex;
 	flex-direction: column;
 	height: $--default-layout;
+}
+
+/* ABOUT */
+.bio {
+  display: flex;
+}
+
+.about {
+  flex: 50%;
 }
