--- a/src/sass/partials/_typography.scss
+++ b/src/sass/partials/_typography.scss
@@ -19,6 +19,10 @@ h1:after, h1:before {
     display: block;
 }
 
+h2 {
+    font-size: 21px;
+}
+
 .wordmark {
     color: $--dark-blue;
     font-family: $--primary-font;
