--- a/src/sass/partials/_nav.scss
+++ b/src/sass/partials/_nav.scss
@@ -3,3 +3,10 @@ a {
     text-decoration: none;
     padding: 0 1rem;
 }
+
+// ADMIN 
+.dashboard {
+    background: $--light-green;
+    color: $--green;
+    padding: 1rem 2rem;
+}
