--- a/src/sass/partials/_nav.scss
+++ b/src/sass/partials/_nav.scss
@@ -8,5 +8,6 @@ a {
 .dashboard {
     background: $--light-green;
     color: $--green;
-    padding: 1rem 2rem;
+    margin-bottom: 1rem;
+    padding: 1rem 2rem 3rem;
 }
