--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,6 +3,6 @@
 @import "partials/forms";
 @import "partials/gallery";
 @import "partials/layout";
-@import "partials/login";
+@import "partials/loader";
 @import "partials/nav";
 @import "partials/typography";
