--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,4 +5,5 @@
 @import "partials/layout";
 @import "partials/loader";
 @import "partials/nav";
+@import "partials/searchbar";
 @import "partials/typography";
