--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,6 +4,7 @@
 @import "partials/gallery";
 @import "partials/layout";
 @import "partials/loader";
+@import "partials/modal";
 @import "partials/nav";
 @import "partials/searchbar";
 @import "partials/typography";
