--- a/src/sass/partials/_modal.scss
+++ b/src/sass/partials/_modal.scss
@@ -35,7 +35,7 @@ input[type="checkbox"]:checked ~ .modal-background {
   width: 100%;
 }
 
-/* below is optional, it is just an example for the blue button */
+/* .. */
 .premodal img {
   cursor: pointer;
 width: 300px;
