--- a/src/sass/partials/_modal.scss
+++ b/src/sass/partials/_modal.scss
@@ -8,37 +8,41 @@ input[type="checkbox"]:checked ~ .modal-background {
 }
 
 .modal-background {
+  cursor: pointer;
 	width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.5);
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: none;
-    z-index: 9998;
+  height: 100%;
+  background: rgba(1,24,38,0.75);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  z-index: 9998;
 }
 
 .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    display: none;	
-    width: 300px;
-    height: 300px;
-    z-index: 9999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  display: none;	
+  max-width: 768px;
+  height: auto;
+  z-index: 9999;
+  transform: translate(0%, 12.5%);
 }
 
 .modal img {
+  cursor: pointer;
+  padding: 2rem;
   width: 100%;
 }
 
 /* .. */
 .premodal img {
   cursor: pointer;
-width: 300px;
+  width: 300px;
 }
 
 .premodal img:hover {
