--- a/src/sass/partials/_modal.scss
+++ b/src/sass/partials/_modal.scss
@@ -1,45 +1,8 @@
+/* Closed modal */
 input[type="checkbox"] {
-	display:none;
+	display: none;
 }
 
-input[type="checkbox"]:checked ~ .modal,
-input[type="checkbox"]:checked ~ .modal-background {
-	display: block;
-}
-
-.modal-background {
-  cursor: pointer;
-	width: 100%;
-  height: 100%;
-  background: rgba(1,24,38,0.75);
-  position: fixed;
-  top: 0;
-  left: 0;
-  display: none;
-  z-index: 9998;
-}
-
-.modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  display: none;	
-  max-width: 768px;
-  height: auto;
-  z-index: 9999;
-  transform: translate(0%, 12.5%);
-}
-
-.modal img {
-  cursor: pointer;
-  padding: 2rem;
-  width: 100%;
-}
-
-/* .. */
 .premodal img {
   cursor: pointer;
   width: 300px;
@@ -47,4 +10,43 @@ input[type="checkbox"]:checked ~ .modal-background {
 
 .premodal img:hover {
 	filter: brightness(70%);
+}
+
+/* Modal triggers */
+input[type="checkbox"]:checked ~ .modal,
+input[type="checkbox"]:checked ~ .modal-background {
+	display: block;
+}
+
+/* Open modal */
+.modal-background {
+  background: rgba(1,24,38,0.75);
+  cursor: pointer;
+  display: none;
+  height: 100%;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 9998;
+}
+
+.modal {
+  bottom: 0;
+  display: none;
+  left: 0;
+  margin: auto;	
+  height: auto;
+  max-width: 768px;
+  position: fixed;
+  right: 0;
+  top: 0;
+  transform: translate(0%, 12.5%);
+  z-index: 9999;
+}
+
+.modal img {
+  cursor: pointer;
+  padding: 2rem;
+  width: 100%;
 }
