--- a/src/sass/partials/_modal.scss
+++ b/src/sass/partials/_modal.scss
@@ -4,11 +4,8 @@ input[type="checkbox"] {
 
 .premodal img {
   cursor: pointer;
-  width: 300px;
-}
-
-.premodal img:hover {
-	filter: brightness(70%);
+  transition: .5s;
+  width: 100%;
 }
 
 /* Modal triggers */
@@ -36,11 +33,11 @@ input[type="checkbox"]:checked ~ .modal-background {
   left: 0;
   margin: auto;	
   height: auto;
-  max-width: 768px;
+  max-width: 1000px;
   position: fixed;
   right: 0;
   top: 0;
-  transform: translate(0%, 12.5%);
+  transform: translate(0%, 10%);
   z-index: 9999;
 }
 
