--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -5,6 +5,7 @@
 $--black: #011826;
 $--blue: #0557a8;
 $--dark-blue: #071d49;
+$--link-blue: #157be2;
 $--green: #1e5359;
 $--light-green: #a7d4d9;
 $--white: #ebeff2;
