--- a/src/sass/partials/_gallery.scss
+++ b/src/sass/partials/_gallery.scss
@@ -7,7 +7,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 3fr));
     grid-template-rows: repeat(1, 150px);
-    grid-gap: 2rem 2.5rem;
+    grid-gap: 2.5rem;
 }
   
 .galleri > .gallery__list > span > figure > img {
