--- a/src/sass/partials/_gallery.scss
+++ b/src/sass/partials/_gallery.scss
@@ -1,3 +1,10 @@
+.header {
+    height: 600px;
+    margin: auto;
+    max-width: 1000px;
+    object-fit: cover;
+}
+
 .galleri {
     margin: 0 auto;
     max-width: 1000px;
