--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,4 +8,5 @@
 @import "partials/modal";
 @import "partials/nav";
 @import "partials/searchbar";
+@import "partials/slider";
 @import "partials/typography";
