--- a/src/sass/partials/_forms.scss
+++ b/src/sass/partials/_forms.scss
@@ -13,7 +13,10 @@ button, .sendbtn {
     width: 100%;
 }
 
-button:active, button:focus {
+button:active, 
+button:focus,
+.sendbtn:active, 
+.sendbtn:focus {
     background: $--input;
     border: $--blue-border;
     color: $--dark-blue;
@@ -24,6 +27,7 @@ button:hover, .sendbtn:hover {
     border: $--blue-border;
 }
 
+// FORM DEFAULT STYLING
 form {
     margin: 2.5rem auto 5rem;
     max-width: 500px;
