--- a/src/sass/partials/_forms.scss
+++ b/src/sass/partials/_forms.scss
@@ -30,11 +30,21 @@ button:hover, .sendbtn:hover {
 // FORM DEFAULT STYLING
 fieldset {
     border: none;
+    padding: 0;
 }
 
 form {
     margin: 2.5rem auto 5rem;
     max-width: 500px;
+}
+
+.form-error {
+    background: $--error;
+    border: 1px solid $--required;
+    color: $--required;
+    font-size: 14px;
+    margin: -1.25rem 0 1.75rem;
+    padding: 1rem;
 }
 
 input, select, textarea {
