--- a/src/sass/partials/_forms.scss
+++ b/src/sass/partials/_forms.scss
@@ -1,3 +1,8 @@
+::-webkit-input-placeholder {    
+    color: $--black !important; 
+    font-family: $--secondary-font; 
+}
+
 button, .sendbtn {
     background: $--blue;
     border: 2px solid $--blue;
@@ -70,7 +75,7 @@ input[type=text] {
 
 input:active, input:focus {
     outline: none !important;
-  }
+}
 
 label {
     font-weight: bold;
@@ -98,6 +103,11 @@ textarea {
 .enquiry {
     background: white;
     padding: 3rem 3rem 4rem;
+}
+
+// Optional field 
+.optxt {
+    font-weight: normal;
 }
 
 select {
