--- a/src/sass/partials/_nav.scss
+++ b/src/sass/partials/_nav.scss
@@ -1,8 +1,110 @@
-a {
+.main-nav {
+    height: 90px;
+  }
+  
+  .logo {
     color: $--dark-blue;
+    line-height: 90px;
+    font-family: $--primary-font;
+    font-size: 2rem;
+    font-weight: bold;
     text-decoration: none;
-    padding: 0 1rem;
-}
+    margin-left: 30px;
+  }
+  
+  .navlinks {
+    list-style: none;
+    float: right;
+    line-height: 90px;
+    margin-right: 30px;
+    padding: 0;
+  }
+  
+  .navlinks li {
+    display: inline-block;
+    margin: 0px 20px;
+  }
+  
+  .navlinks li a {
+    color: $--blue;
+    text-decoration: none;
+    font-size: 18px;
+    transition: all 0.3s linear 0s;
+  }
+  
+  .navlinks li a:hover {
+    color: $--link-blue;
+    padding-bottom: 8px;
+    border-bottom: 2px solid $--dark-blue;
+  }
+  
+  #check {
+    display: none;
+  }
+  
+  .menu-btn {
+    font-size: 25px;
+    color: white;
+    float: right;
+    line-height: 90px;
+    margin-right: 40px;
+    display: none;
+    cursor: pointer;
+  }
+  
+  @media (max-width: 768px) {
+    .navlinks {
+      position: absolute;
+      width: 100%;
+      height: 100vh;
+      text-align: center;
+      transition: all 0.5s;
+      left: -100%;
+      background: $--blue;
+      z-index: 999;
+    }
+  
+    .navlinks li {
+      display: block;
+    }
+  
+    .navlinks li a {
+        color: white;
+      font-size: 20px;
+    }
+  
+    .navlinks li a:hover {
+      border-bottom: none;
+    }
+  
+    .menu-btn {
+      display: block;
+    }
+  
+    #check:checked ~ .navlinks {
+      left: 0;
+    }
+  }
+  
+  @media (max-width: 360px) {
+    .logo {
+      margin-left: 10px;
+      font-size: 25px;
+    }
+  
+    .menu-btn {
+      margin-right: 10px;
+      font-size: 25px;
+    }
+  
+    .menu-btn:focus {
+      color: blue;
+    }
+  }
+  
+  svg path {
+      stroke: $--dark-blue;
+  }
 
 // ADMIN 
 .dashboard {
