--- a/src/sass/partials/_nav.scss
+++ b/src/sass/partials/_nav.scss
@@ -53,6 +53,10 @@
   }
   
   @media (max-width: 768px) {
+    .logo {
+        font-size: 1.5rem;
+      }
+
     .navlinks {
       position: absolute;
       width: 100%;
@@ -89,7 +93,7 @@
   @media (max-width: 360px) {
     .logo {
       margin-left: 10px;
-      font-size: 25px;
+      font-size: 1rem;
     }
   
     .menu-btn {
