--- a/src/sass/partials/_slider.scss
+++ b/src/sass/partials/_slider.scss
@@ -59,3 +59,9 @@
         height: 300px !important;
     }
 }
+
+@media (max-width: 600px) {
+    .sliderimg {
+        height: 250px !important;
+    }
+}
