--- a/src/sass/partials/_typography.scss
+++ b/src/sass/partials/_typography.scss
@@ -45,3 +45,18 @@ h2 {
     font-weight: bold;
     color: $--link-blue;
 }
+
+@media (max-width: 768px) {
+    h1 {
+        grid-template-columns: 50px max-content 50px;
+        grid-gap: 1rem;
+        grid-template-rows: 1.25rem 0;
+    }  
+}
+
+@media (max-width: 500px) {
+    h1 {
+        grid-template-columns: 25px max-content 25px;
+        grid-template-rows: 1.25rem 0;
+    }  
+}
