--- a/src/sass/partials/_nav.scss
+++ b/src/sass/partials/_nav.scss
@@ -53,6 +53,9 @@
   }
   
   @media (max-width: 768px) {
+    .navlinks li a:hover {
+        color: white;
+      }
     .logo {
         font-size: 1.5rem;
       }
@@ -102,7 +105,7 @@
     }
   
     .menu-btn:focus {
-      color: blue;
+      color: white;
     }
   }
   
