--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
 @import "partials/base";
+@import "partials/enquiry";
 @import "partials/footer";
 @import "partials/forms";
 @import "partials/gallery";
