--- a/src/sass/partials/_enquiry.scss
+++ b/src/sass/partials/_enquiry.scss
@@ -1,1 +1,127 @@
+.enquiry {
+    background: white;
+    padding: 0 2rem 0;
+}
 
+.enquiry input, .enquiry textarea {
+    margin: 1rem 0 2rem;
+    padding: .5rem 1rem;
+}
+
+.notetab {
+    height: 75px;
+}
+
+// Optional field 
+.optxt {
+    font-weight: normal;
+}
+
+#openPopUp {
+    display: block;
+    text-align:center;
+    background-color: white;
+    padding: 15px 15px;
+    border: 1px solid blue;
+    color: blue;
+    margin: 3rem auto 0;
+    text-decoration: none;
+    transition:background-color 0.75s linear;
+    -webkit-transition:background-color 0.75s linear;
+    -moz-transition:background-color 0.75s linear;
+    -o-transition:background-color 0.75s linear;
+    width: 250px;
+  }
+
+  a#openPopUp:hover{
+    cursor: pointer;
+    background-color: black;
+    border: 1px solid black;
+    color: white;
+  }
+
+  .popup{
+    position: fixed;
+    top: -100vh;
+    left: 0;
+    z-index: 9999999;
+    background: rgba(0,0,0, 0.75);
+    width: 100vw;
+    height: 100vh;
+    opacity: 0;
+  
+      -webkit-transition: opacity  0.75s ease;
+      -moz-transition: opacity 0.75s ease;
+      -o-transition: opacity 0.75s ease;
+      transition: opacity 0.75s ease;
+  }
+  .popup .popUpContainer{
+    width: 100%;
+    max-width: 500px;
+    position: absolute; 
+    left: 50%;
+    top: -110vh;
+      -webkit-transition: top  0.75s ease;
+      -moz-transition: top 0.75s ease;
+      -o-transition: top 0.75s ease;
+      transition: top 0.75s ease;
+  
+    /* Trick to properly center the element by using negative 
+    1/2 length of element as margin left and top */
+    margin-left: -250px;
+    background-color: #ffffff;
+    z-index: 9999999; 
+  }
+
+  /* The cancel button on popup dialog */
+  .popup a.closePopUp{
+    font-family: verdana;
+    color: #e74c3c;
+    position: absolute;
+    top: 0.2em;
+    right: 0.375em;
+    margin: 0;
+    padding: 5px;
+    font-weight: bold;
+    font-size: 1.5em;
+    text-decoration: none;
+  }
+  /* The cancel button on popup dialog */
+  .popup a:hover{
+    color: #c0392b;
+  }
+  /* When popup is targeted, by clicking on link with #popup in HTML */
+  .popup:target{
+    opacity: 1;
+    top: 0;
+  }
+  .popup .closePopUpOutSide{
+    position: absolute;
+    left:0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999991; 
+  }
+  .popup:target .popUpContainer{
+    top: 2.5%;
+      -webkit-transition: top  0.75s ease;
+      -moz-transition: top 0.75s ease;
+      -o-transition: top 0.75s ease;
+      transition: top 0.75s ease;
+  }
+  
+  @media  (max-width: 796px) {
+    .popup .popUpContainer{
+      width: 90%;
+      max-width: none;
+      left: 5%;
+      margin-left: 0;
+    }
+    .popup:target .popUpContainer{
+      top: 25px;
+      -webkit-transition: top  0.75s ease;
+      -moz-transition: top 0.75s ease;
+      -o-transition: top 0.75s ease;
+      transition: top 0.75s ease;
+    }
+  }
