--- a/src/sass/partials/_forms.scss
+++ b/src/sass/partials/_forms.scss
@@ -40,7 +40,7 @@ form {
     border: 1px solid $--required;
     color: $--required;
     font-size: 14px;
-    margin: -1.25rem 0 1.25rem;
+    margin: -.5rem 0 1.25rem;
     padding: .5rem 1rem;
 }
 
