--- a/src/sass/partials/_gallery.scss
+++ b/src/sass/partials/_gallery.scss
@@ -1,7 +1,11 @@
 .galleri {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 1rem;
     margin: 0 auto;
     max-width: 1000px;
-}
+  }
 
 /* PAINTING DETAIL PAGE */ 
 .painting {
