--- a/src/sass/partials/_gallery.scss
+++ b/src/sass/partials/_gallery.scss
@@ -1,10 +1,14 @@
 .galleri {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-columns: repeat(3, 1fr);
     grid-gap: 1rem;
     margin: 0 auto;
     max-width: 1000px;
+  }
+
+  .galleri img {
+    object-fit: cover;
+    width: 100%;
   }
 
 /* PAINTING DETAIL PAGE */ 
