--- a/src/sass/partials/_gallery.scss
+++ b/src/sass/partials/_gallery.scss
@@ -7,8 +7,45 @@
   }
 
   .galleri img {
-    object-fit: cover;
     width: 100%;
+  }
+
+  /* overlay */
+  .galleri_item {
+    position: relative;
+  }
+  
+  .galleri_item img {
+    display: block;
+  }
+  
+  .galleri_content {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background: rgba(1,24,38,0.5);
+  }
+  
+  .galleri_item:hover .galleri_content {
+    opacity: 1;
+  }
+  
+  .galleri_detail {
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 75%;
   }
 
 /* PAINTING DETAIL PAGE */ 
@@ -35,4 +72,5 @@
 .category-tag {
     background: $--light-green;
     padding: .5rem 1.5rem;
+    text-transform: capitalize;
 }
