--- a/src/sass/partials/_searchbar.scss
+++ b/src/sass/partials/_searchbar.scss
@@ -21,9 +21,11 @@ input::placeholder {
     background: white;
     border: $--black-border;
     border-bottom: 0;
+    color: black;
     display: flex;
     flex-direction: column;
     padding: 1rem 1.5rem 1.5rem 3rem;
+    text-decoration: none;
 }
 
 .result:last-child {
@@ -32,6 +34,7 @@ input::placeholder {
 
 .result:hover {
     background: $--light-green;
+    color: black;
 }
 
 .tab {
