--- a/src/sass/partials/_nav.scss
+++ b/src/sass/partials/_nav.scss
@@ -11,6 +11,10 @@
     text-decoration: none;
     margin-left: 30px;
   }
+
+  .logo:hover {
+    color: $--link-blue;
+  }
   
   .navlinks {
     list-style: none;
