--- a/src/sass/partials/_modal.scss
+++ b/src/sass/partials/_modal.scss
@@ -1,48 +1,3 @@
-input[type="checkbox"] {
-	display: none;
-}
-
-.premodal img {
-  cursor: pointer;
-  transition: .5s;
-  width: 100%;
-}
-
-/* Modal triggers */
-input[type="checkbox"]:checked ~ .modal,
-input[type="checkbox"]:checked ~ .modal-background {
-	display: block;
-}
-
-/* Open modal */
-.modal-background {
-  background: rgba(1,24,38,0.75);
-  cursor: pointer;
-  display: none;
-  height: 100%;
-  left: 0;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 9998;
-}
-
-.modal {
-  bottom: 0;
-  display: none;
-  left: 0;
-  margin: auto;	
-  height: auto;
-  max-width: 1000px;
-  position: absolute;
-  right: 0;
-  top: 0;
-  transform: translate(0%, 10%);
-  z-index: 9999;
-}
-
-.modal img {
-  cursor: pointer;
-  padding: 2rem;
+.painting-image img {
   width: 100%;
 }
