--- a/src/sass/partials/_gallery.scss
+++ b/src/sass/partials/_gallery.scss
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 1rem;
-    margin: 0 auto;
+    margin: 1rem auto 0;
     max-width: 1000px;
   }
 
@@ -64,26 +64,6 @@
   .featured {
     max-width: 1000px;
     margin: 0 auto;
-}
-
-.gallery {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 1.5rem;
-}
-
-.gallery img {
-  width: 100%;
-  max-width: 312px;
-  height: 300px;
-  object-fit: cover;
-}
-
-.gallery:img hover {
-  transform: scale(1.2);
 }
 
 /* PAINTING DETAIL PAGE */ 
