--- a/src/sass/partials/_enquiry.scss
+++ b/src/sass/partials/_enquiry.scss
@@ -1,3 +1,7 @@
+.request {
+  margin-top: 3rem;
+}
+
 .enquiry {
     background: white;
     margin-bottom: 2.5rem;
@@ -33,7 +37,7 @@
     padding: 15px 15px;
     border: 1px solid blue;
     color: blue;
-    margin: 3rem auto 0;
+    margin: 2rem auto 0;
     text-decoration: none;
     transition:background-color 0.75s linear;
     -webkit-transition:background-color 0.75s linear;
