--- a/src/sass/partials/_enquiry.scss
+++ b/src/sass/partials/_enquiry.scss
@@ -1,5 +1,5 @@
 .request {
-  margin-top: 3rem;
+  margin: 0 0 3rem;
 }
 
 .enquiry {
@@ -33,10 +33,11 @@
 #openPopUp {
     display: block;
     text-align:center;
-    background-color: white;
+    background-color:transparent;
     padding: 15px 15px;
-    border: 1px solid blue;
-    color: blue;
+    border: $--blue-border;
+    color: $--dark-blue;
+    font-weight: bold;
     margin: 2rem auto 0;
     text-decoration: none;
     transition:background-color 0.75s linear;
@@ -48,9 +49,10 @@
 
   a#openPopUp:hover{
     cursor: pointer;
-    background-color: black;
-    border: 1px solid black;
+    background-color: $--black;
+    border: $--blue-border;
     color: white;
+    font-weight: normal;
   }
 
   .popup{
