--- a/src/sass/partials/_forms.scss
+++ b/src/sass/partials/_forms.scss
@@ -13,7 +13,7 @@ button, .sendbtn {
     font-weight: bold;
     letter-spacing: .1rem;
     margin: 1rem 0 0;
-    padding: 1.25rem;
+    padding: 1rem;
     text-transform: uppercase;
     transition: .25s;
     width: 100%;
@@ -48,8 +48,8 @@ input, select, textarea {
     border: $--black-border;
     box-sizing: border-box;
     display: inline-block; /* is this line necessary? */
-    margin: 1rem 0 2rem;
-    padding: 1rem 1rem;
+    margin: 1rem 0 1.25rem;
+    padding: .5rem 1rem;
     width: $--default-layout;
 }
 
