--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,5 @@
 @import "partials/base";
-@import "partials/enquiry";
+@import "partials/ui/enquiry";
 @import "partials/footer";
 @import "partials/forms";
 @import "partials/gallery";
@@ -8,6 +8,6 @@
 @import "partials/messages";
 @import "partials/modal";
 @import "partials/nav";
-@import "partials/searchbar";
+@import "partials/ui/searchbar";
 @import "partials/slider";
 @import "partials/typography";
