--- a/src/sass/partials/_forms.scss
+++ b/src/sass/partials/_forms.scss
@@ -122,11 +122,26 @@ select {
     display: flex;
     justify-content: center;
     font-size: 18px;
-    margin: 0.25rem 0 -1rem;
+    margin: .75rem 0 -1rem;
 }
 
 .file-input::-webkit-file-upload-button {
     visibility: hidden;
+}
+
+select {
+    appearance: none;
+    background-image: url('../../assets/icons/dropbtn.svg');
+    background-repeat: no-repeat;
+    background-position-x: 97.5%;
+    background-position-y: 13px;
+    padding: .75rem 1rem;
+}
+
+option {
+    background: $--box-color;
+    color: $--dark-blue;
+    font-size: 14px;
 }
 
 /* MEDIA QUERIES */
