--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -13,3 +13,9 @@ footer {
   padding: 1.5rem;
   text-align: center;
 }
+
+@media only screen and (max-width: $--mobile-screen) {
+  .wrapper {
+    padding: 1rem 2rem 3rem;
+  }
+}
