--- a/src/sass/partials/_gallery.scss
+++ b/src/sass/partials/_gallery.scss
@@ -97,6 +97,16 @@
     text-transform: capitalize;
 }
 
+@media only screen and (max-width: $--tablet-screen) {
+  .galleri {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .galleri_item img {
+    height: 250px;
+    object-fit: cover;
+  }
+}
+
 @media only screen and (max-width: $--mobile-screen) {
   .galleri {
     grid-template-columns: repeat(1, 1fr);
