--- a/src/sass/partials/_gallery.scss
+++ b/src/sass/partials/_gallery.scss
@@ -89,10 +89,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin: .75rem 0 0;
 }
 
 .category-tag {
     background: $--light-green;
+    margin-bottom: 1.25rem;
     padding: .5rem 1.5rem;
     text-transform: capitalize;
 }
@@ -102,16 +104,36 @@
     grid-template-columns: repeat(2, 1fr);
   }
   .galleri_item img {
-    height: 250px;
+    height: 275px;
     object-fit: cover;
   }
 }
 
 @media only screen and (max-width: $--mobile-screen) {
+  .category-tag {
+    margin-bottom: 1.25rem;
+  }
   .galleri {
     grid-template-columns: repeat(1, 1fr);
+    grid-gap: 1.75rem;
+    margin: 0 0 1rem;
+  }
+  .galleri_item img {
+    height: auto;
+  }
+  .painting-content {
+    padding: 1.2rem 1.5rem 2rem;
+  }
+  .painting-image {
+    margin-top: 1rem;
+  }
+  .painting-titles {
+    align-items: start;
+    flex-direction: column;
+    gap: .75rem;
   }
   .subhead {
     flex-direction: column;
+    margin-bottom: 1.5rem;
   }
 }
