--- a/src/sass/partials/_nav.scss
+++ b/src/sass/partials/_nav.scss
@@ -61,22 +61,24 @@
         color: white;
       }
     .logo {
-        font-size: 1.5rem;
+        font-size: 1.75rem;
       }
 
     .navlinks {
+      padding: 1rem 2rem 0;
       position: absolute;
       width: 100%;
       height: 100vh;
-      text-align: center;
       transition: all 0.5s;
       left: -100%;
+      line-height: 3.5rem;
       background: $--blue;
       z-index: 999;
     }
   
     .navlinks li {
       display: block;
+      margin: 0;
     }
   
     .navlinks li a {
@@ -97,15 +99,14 @@
     }
   }
   
-  @media (max-width: 360px) {
+  @media (max-width: $--mobile-screen) {
     .logo {
-      margin-left: 10px;
-      font-size: 1rem;
+      margin-left: 25px;
+      font-size: 1.5rem;
     }
   
     .menu-btn {
-      margin-right: 10px;
-      font-size: 25px;
+      margin-right: 25px;
     }
   
     .menu-btn:focus {
