--- a/src/sass/partials/ui/_enquiry.scss
+++ b/src/sass/partials/ui/_enquiry.scss
@@ -89,21 +89,20 @@
   }
 
   /* The cancel button on popup dialog */
-  .popup a.closePopUp{
-    font-family: verdana;
-    color: #e74c3c;
+  .popup a.closePopUp {
+    color: $--required;
     position: absolute;
-    top: 0.2em;
-    right: 0.375em;
+    top: 0;
+    right: 0;
     margin: 0;
-    padding: 5px;
+    padding: 0 .5rem;
     font-weight: bold;
-    font-size: 1.5em;
+    font-size: 2.5em;
     text-decoration: none;
   }
   /* The cancel button on popup dialog */
   .popup a:hover{
-    color: #c0392b;
+    color: $--required;
   }
   /* When popup is targeted, by clicking on link with #popup in HTML */
   .popup:target {
