--- a/src/sass/partials/_dashboard.scss
+++ b/src/sass/partials/_dashboard.scss
@@ -42,6 +42,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: 1rem;
+}
+
+.post-subject {
+    background: #e5eded;
+    padding: .75rem 2rem .75rem;
 }
 
 .note {
