--- a/src/sass/partials/_dashboard.scss
+++ b/src/sass/partials/_dashboard.scss
@@ -57,16 +57,25 @@
 }
 
 @media (max-width: $--tablet-screen) {
-    .note, .post-subject {
+    .note {
         padding: .75rem 1rem 2rem;
+    }
+    .post {
+        padding: 1.5rem 1.5rem 2rem;
     }
     .post-detail {
         flex-direction: column;
+    }
+    .post-subject {
+        padding: .75rem 1rem .75rem;
     }
 }
 
 @media (max-width: $--mobile-screen) {
     .adminav {
         margin-top: 2rem;
+    }
+    .enquiry-section {
+        margin-top: 2rem !important;
     }
 }
