--- a/src/sass/partials/_nav.scss
+++ b/src/sass/partials/_nav.scss
@@ -57,7 +57,7 @@
     cursor: pointer;
   }
   
-  @media (max-width: 768px) {
+  @media (max-width: $--laptop-screen) {
     .navlinks li a:hover {
         color: white;
       }
