--- a/src/sass/partials/ui/_enquiry.scss
+++ b/src/sass/partials/ui/_enquiry.scss
@@ -5,6 +5,7 @@
 .enquiry {
     background: white;
     margin-bottom: 2.5rem;
+    margin-top: 4rem;
     padding: 0 2rem 0;
 }
 
@@ -28,6 +29,11 @@
 // Optional field 
 .optxt {
     font-weight: normal;
+}
+
+.counter {
+  font-size: 14px;
+  margin-top: -.5rem;
 }
 
 #openPopUp {
