--- a/src/sass/partials/_nav.scss
+++ b/src/sass/partials/_nav.scss
@@ -56,6 +56,22 @@
     display: none;
     cursor: pointer;
   }
+
+/* LOGIN | LOGOUT BUTTON */
+.logbtn {
+  background: $--blue;
+  color: white !important;
+  font-size: 14px !important;
+  letter-spacing: .2rem;
+  padding: .75rem 1.5rem;
+  text-transform: uppercase;
+}
+
+.logbtn:focus, .logbtn:hover {
+  background: $--black;
+  border-bottom: 0 !important;
+  padding-bottom: .75rem !important;
+}
   
   @media (max-width: $--laptop-screen) {
     .navlinks li a:hover {
@@ -97,6 +113,10 @@
   
     #check:checked ~ .navlinks {
       left: 0;
+    }
+
+    .logbtn {
+      background: $--black;
     }
   }
   
