--- a/src/sass/partials/_dashboard.scss
+++ b/src/sass/partials/_dashboard.scss
@@ -35,7 +35,7 @@
 .post, .inbox-msg {
     background: white;
     margin-bottom: 1.5rem;
-    padding: 3rem 3rem 4rem;
+    padding: 3rem 3rem 6rem;
 }
 
 .post-detail, .inbox-detail {
@@ -54,6 +54,23 @@
     background: $--box-color;
     margin-top: 2rem;
     padding: 1.5rem 2rem 3rem;
+}
+
+/* Delete message button */
+.delbtn {
+    background: #FB5B5B;
+    border: 1px solid #FB5B5B;
+    float: right;
+    font-size: 14px;
+    letter-spacing: 0.075rem;
+    margin-top: 1.5rem;
+    padding: .25rem 1rem;
+    width: auto;
+}
+
+.delbtn:focus, .delbtn:hover {
+    background: #FB2828;
+    border: 1px solid #FB2828;
 }
 
 @media (max-width: $--tablet-screen) {
