--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -10,7 +10,7 @@ footer {
   font-size: $--bread-text;
   letter-spacing: $--default-letter-spacing;
   line-height: .5rem;
-  padding: 1.5rem;
+  padding: 2rem 0 1.5rem;
   text-align: center;
 }
 
