--- a/src/sass/partials/ui/_searchbar.scss
+++ b/src/sass/partials/ui/_searchbar.scss
@@ -18,7 +18,7 @@ input::placeholder {
 }
 
 .result {
-    background: white;
+    background: #e5f2f3;
     border: $--black-border;
     border-bottom: 0;
     color: black;
